v1.02 ???
Fixed a bug where an error could occasionally be misreported.
Added support for TCP connections.

v1.01 7-Oct-04
Add flag to detect if we are reentered from a callback and give a sensible
error if this occurs rather than loosing track of recieved packets.
Fix potential bug if more than 2^32 requests have been sent.
Fix bug that could cause a spurious error on the next operation after a
connection timed out.
Wimpslot is now set correctly for the frontend.

v1.00 14-Apr-04
Added frontend for creating mount files.

v0.98 22-Feb-04
Fixed bug that could cause directory not empty errors when trying to delete
a directory.
Removed limitation of only supporting 4 concurrent OS_GBPB directory
enumerations per mount.
Fixed bug that could occasionally cause a stale file handle error when
writing a file.
Fix problems with pipelined reading or writing of 0 byte files.
Fix case-insensitive matching for directory names.

v0.97 12-Jan-04
Allow ; in filenames.
Minor improvements to logging code.
Fix bug that could leave an open socket if mounting failed.
Added unumask option.
Added CaseSensitive option and made the default caseinsensitive.
Fixed bug that could prevent timestamps getting set correctly.
Fixed bug that could cause OS_Args 3 to erroneously write zeros to the file.

v0.96 14-Dec-03
Fixed bug that could cause some filetypes to be incorrectly set to the
default filetype.
No longer waits for a reponse when unmounting, so it won't wait for
a timeout if server is uncontactable when the module is killed.
Implemented pipelining of file reads and writes to improve speed, and
added the Pipelining option to control this.
Fixed a bug that on some network cards could cause a
"no buffer space available" error.

v0.95 9-Nov-03
Fixed bug in OS_File 0 handling which could cause incorrect size and
filetype if an existing file of the same name was present.

v0.94 6-Nov-03
Added support for symlinks.

v0.93 30-Oct-03