@@ -1,6 +1,7 @@
 v1.02 ???
-Fixed a bug where an error could occasionally be misreported.
 Added support for TCP connections.
+Fixed a bug where an error could occasionally be misreported.
+Added support to the frontend for editing existing mount files.
 
 v1.01 7-Oct-04
 Add flag to detect if we are reentered from a callback and give a sensible
